--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,34 +1,35 @@
-body{
+body {
     font-size: 20px;
     font-family: monospace;
+    background-image: ("http://wallpapercave.com/wp/6cbPLRK.jpg");
 }
 
 #container{
-    margin : 20px auto;
-    background-color: white;
-    height: 300px;
-    width : 700px;
-    border-radius: 5px;
-    box-shadow: 0px 5px 15px 0px;
+    margin : 70px auto;
+    background-color: lightgray;
+    height: 340px;
+    width : 730px;
+    border-radius: 10px;
+    box-shadow: 0px 15px 30px 0px;
     position: relative;
 }
 #start{
     font-size: 1.5em;
     font-weight: bolder;
     word-break: break-all;
-    width:100px;
-    height:150px;
-    border : 2px solid lightgrey;
+    width:290px;
+    height:40px;
+    border : 10px solid black;
     text-align: center;
     cursor: pointer;
     position: absolute;
-    left:300px;
-    top:50px;
-    color : lightgrey;
+    left:210px;
+    top:160px;
+    color : yellow;
 }
 #start:hover{
-    border: 3px solid lightseagreen;
-    color : lightseagreen;
+    border: 6px solid blue;
+    color : yellow;
 }
 
 #qImg{
@@ -122,27 +123,28 @@ body{
 #scoreContainer{
     margin : 20px auto;
     background-color: white;
-    opacity: 0.8;
+    opacity: 1.8;
     height: 300px;
-    width : 700px;
+    width : 540px;
     border-radius: 5px;
     box-shadow: 0px 5px 15px 0px;
     position: relative;
     display: none;
 }
 #scoreContainer img{
-    position: absolute;
-    top:100px;
-    left:325px;
+    position: relative;
+    top:50px;
+    left:10px;
+    height:200px;
 }
 #scoreContainer p{
     position: absolute;
     display: block;
     width : 59px;
     height :59px;
-    top:130px;
+    top:35px;
     left:325px;
-    font-size: 1.5em;
+    font-size: 3.5em;
     font-weight: bold;
     text-align: center;
 }
